Draft of new post

--- a/_drafts/17-01-14_Post.md
+++ b/_drafts/17-01-14_Post.md
@@ -2,7 +2,7 @@
 layout: hyde-post
 title: Stuff Eye Made 2
 ---
-
+![Stuff ∆ Made][Header]
 Did you know I used to be a designer? Well, I still identify as a designer, but I don't do much designing. Cue Hank Moody explaining that you're a writer if you write. 
 
 While I work on rebuilding my portfolio site and 
@@ -10,14 +10,27 @@ While I work on rebuilding my portfolio site and
 Clean my hardrive and share my work.
 
 ### Dope
-![dope](/assets/img/dope1-web.jpg)
-![PDX Flag](/assets/img/blog/16-05-00_Blog-PDX.jpg)
+words
+![My City Is Dope][Photo 0]
 
 ### Graduation Notes
+A mutual friend of mine contracted me to create some 
+![Graduation - Jorge][Photo 1]
+![Graduation - Andrea]({{ site.url }}/assets/img/blog/2017/16-01-00_Blog-Grad-2.jpg)
 
 ### Pretty Wings
+Maxwell, the singer not the coffee, has a really great record called Pretty Wings. In an ill fated late night attempt to master some dry brush 
+![Pretty Wings]({{ site.url }}/assets/img/blog/2017/16-01-00_Blog-PrettyWings.jpg)
 
 ### Rocking Chair
-![Rocking Chair Final]({{ site.url }}/assets/img/dope1-web.jpg)
+My first attempt at 
+![Rocking Chair Final][Photo 4]
 
-<iframe width="640" height="360" src="https://www.youtube.com/embed/hBFboc1aUj0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/hBFboc1aUj0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+
+[Header]:  http://placehold.it/700x150/202020/ffffff/&text=Stuff+Eye+Mayde
+[Photo 0]: {{ site.baseurl }}assets/img/blog/2017/17-01-00_Blog-Dope.jpg
+[Photo 1]: {{ site.baseurl }}assets/img/blog/2017/17-01-00_Blog-Grad-1.jpg
+[Photo 2]: {{ site.baseurl }}assets/img/blog/2017/17-01-00_Blog-Grad-2.jpg
+[Photo 3]: {{ site.baseurl }}assets/img/blog/2017/17-01-00_Blog-PrettyWings.jpg
+[Photo 4]: {{ site.baseurl }}assets/img/blog/2017/17-01-00_Blog-RockingChair.jpg
